--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-20T16:46:39Z</date>
+						<date>2019-03-20T16:49:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -504,31 +504,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								66xNqtIRBAny
-								jzGLIy+upA==
+								1+s70Zwd5NMN
+								N8QPjKnWcA==
 								</data>
 								<key>Size</key>
-								<integer>639039</integer>
+								<integer>682509</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JfTcEhHnIG9m
-								wzAIoS3f/g==
+								1YlMQoVSF1Ft
+								Q96RLhI3ig==
 								</data>
 								<key>Size</key>
-								<integer>42951</integer>
+								<integer>44407</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								qI7Fi2dir1HM
-								cOz8WU4+lA==
+								CN1AVGdX3iX2
+								Q0j3/GP0YQ==
 								</data>
 								<key>Size</key>
-								<integer>500272</integer>
+								<integer>537144</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
