UVM sponsor logos
UVM sponsor logos

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -9340,7 +9340,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-22T14:53:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9424,6 +9424,16 @@
 								</data>
 								<key>Size</key>
 								<integer>36359</integer>
+							</dict>
+							<key>files/stacks-image-4d3140c.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RVKY4j0x222n
+								9kDcJ0uiQQ==
+								</data>
+								<key>Size</key>
+								<integer>18064</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
@@ -9575,6 +9585,16 @@
 								<key>Size</key>
 								<integer>37226</integer>
 							</dict>
+							<key>files/stacks-image-b30865a.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVN6rbV2QdyG
+								lVx/4pD8cA==
+								</data>
+								<key>Size</key>
+								<integer>34508</integer>
+							</dict>
 							<key>files/stacks-image-cc75d0b-150x138.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9615,6 +9635,16 @@
 								<key>Size</key>
 								<integer>12393</integer>
 							</dict>
+							<key>files/stacks-image-f793485-1200x360.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yW3JowtF3Fey
+								i3AQIDStYw==
+								</data>
+								<key>Size</key>
+								<integer>59895</integer>
+							</dict>
 							<key>files/stacks-image-fd0e8b0-248x56.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9649,11 +9679,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KRpwu5jFuJFr
-								lZeU2L6IyQ==
+								hnwYqeOS6S7y
+								1F7TV6I61Q==
 								</data>
 								<key>Size</key>
-								<integer>75072</integer>
+								<integer>76160</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13836,7 +13866,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-20T16:49:53Z</date>
+						<date>2019-03-22T14:53:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14875,8 +14905,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								X8nhabaAEmIC
-								BF7nj5MHDg==
+								fdlUWkT4GVQH
+								hO9ND1WhDg==
 								</data>
 								<key>Size</key>
 								<integer>3748</integer>
@@ -15023,7 +15053,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEhU1n1kNqADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEilyvPySWADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15033,14 +15063,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSFTWfWR
-				eYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSKXK8/K
+				joAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBIVNZ9ZGj
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBIpcrz8rz
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15050,7 +15080,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBIVNZ9ZG8gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBIpcrz8s2gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15060,7 +15090,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBIVNZ9ZHVgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBIpcrz8txgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
