student scholarship info
student scholarship info

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-22T14:53:09Z</date>
+						<date>2019-03-22T15:11:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -354,11 +354,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3EcCoogbWNcG
-								jTYLs8QLJw==
+								dTAMYAPFbc2k
+								wNMajnzjKQ==
 								</data>
 								<key>Size</key>
-								<integer>143240</integer>
+								<integer>144098</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hnwYqeOS6S7y
-								1F7TV6I61Q==
+								Sf21kS0GIgL8
+								0SIbqWMGvA==
 								</data>
 								<key>Size</key>
-								<integer>76160</integer>
+								<integer>76521</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
