--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -7630,7 +7630,7 @@
 					<key>page54 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-22T15:11:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7665,6 +7665,16 @@
 								<key>Size</key>
 								<integer>530208</integer>
 							</dict>
+							<key>files/stacks-image-4d3140c.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RVKY4j0x222n
+								9kDcJ0uiQQ==
+								</data>
+								<key>Size</key>
+								<integer>18064</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -7685,6 +7695,16 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
+							<key>files/stacks-image-b30865a.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVN6rbV2QdyG
+								lVx/4pD8cA==
+								</data>
+								<key>Size</key>
+								<integer>34508</integer>
+							</dict>
 							<key>files/stacks-image-eb41103.png</key>
 							<dict>
 								<key>Digest</key>
@@ -7695,15 +7715,25 @@
 								<key>Size</key>
 								<integer>511231</integer>
 							</dict>
+							<key>files/stacks-image-f793485-1200x360.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yW3JowtF3Fey
+								i3AQIDStYw==
+								</data>
+								<key>Size</key>
+								<integer>59895</integer>
+							</dict>
 							<key>files/stacks_page_page54.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tSntpAeXSB7j
-								XQ7dSyg6bQ==
+								Gj+rhpt4ykz+
+								HwvaNOsZPA==
 								</data>
 								<key>Size</key>
-								<integer>133856</integer>
+								<integer>138899</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -7719,11 +7749,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								njrSWhhh79lu
-								4qQpL89qcg==
+								90tWI3KTqwCY
+								GUY4EGKy5g==
 								</data>
 								<key>Size</key>
-								<integer>62417</integer>
+								<integer>67080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9340,7 +9370,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-22T14:53:09Z</date>
+						<date>2019-03-22T15:11:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9659,11 +9689,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3EcCoogbWNcG
-								jTYLs8QLJw==
+								dTAMYAPFbc2k
+								wNMajnzjKQ==
 								</data>
 								<key>Size</key>
-								<integer>143240</integer>
+								<integer>144098</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -9679,11 +9709,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hnwYqeOS6S7y
-								1F7TV6I61Q==
+								Sf21kS0GIgL8
+								0SIbqWMGvA==
 								</data>
 								<key>Size</key>
-								<integer>76160</integer>
+								<integer>76521</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13754,7 +13784,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-20T16:46:39Z</date>
+						<date>2019-03-22T15:02:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13783,11 +13813,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								G8TZ1gvMsGwc
-								C9bDS/8P+A==
+								9jNcVGE4a5y1
+								KYHsQaimPQ==
 								</data>
 								<key>Size</key>
-								<integer>5447</integer>
+								<integer>5479</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13866,7 +13896,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-22T14:53:09Z</date>
+						<date>2019-03-22T15:02:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14905,11 +14935,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fdlUWkT4GVQH
-								hO9ND1WhDg==
+								GBGhSBANs36u
+								CKFSShKtsA==
 								</data>
 								<key>Size</key>
-								<integer>3748</integer>
+								<integer>4599</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15053,7 +15083,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEilyvPySWADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEimWB0dNqADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15063,14 +15093,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSKXK8/K
-				joAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSKZYHR1
+				YIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBIpcrz8rz
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBIplgdHWS
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15080,7 +15110,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBIpcrz8s2gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBIplgdHW8gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15090,7 +15120,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBIpcrz8txgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBIplgdHXmgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
