--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-22T15:11:58Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -70,6 +70,16 @@
 								<key>Size</key>
 								<integer>530208</integer>
 							</dict>
+							<key>files/stacks-image-4d3140c.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RVKY4j0x222n
+								9kDcJ0uiQQ==
+								</data>
+								<key>Size</key>
+								<integer>18064</integer>
+							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -90,6 +100,16 @@
 								<key>Size</key>
 								<integer>21714</integer>
 							</dict>
+							<key>files/stacks-image-b30865a.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								LVN6rbV2QdyG
+								lVx/4pD8cA==
+								</data>
+								<key>Size</key>
+								<integer>34508</integer>
+							</dict>
 							<key>files/stacks-image-eb41103.png</key>
 							<dict>
 								<key>Digest</key>
@@ -100,15 +120,25 @@
 								<key>Size</key>
 								<integer>511231</integer>
 							</dict>
+							<key>files/stacks-image-f793485-1200x360.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								yW3JowtF3Fey
+								i3AQIDStYw==
+								</data>
+								<key>Size</key>
+								<integer>59895</integer>
+							</dict>
 							<key>files/stacks_page_page54.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								tSntpAeXSB7j
-								XQ7dSyg6bQ==
+								Gj+rhpt4ykz+
+								HwvaNOsZPA==
 								</data>
 								<key>Size</key>
-								<integer>133856</integer>
+								<integer>138899</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -124,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								njrSWhhh79lu
-								4qQpL89qcg==
+								90tWI3KTqwCY
+								GUY4EGKy5g==
 								</data>
 								<key>Size</key>
-								<integer>62417</integer>
+								<integer>67080</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
