closed REU apps
closed REU apps

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6226,7 +6226,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T18:04:06Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6345,11 +6345,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jwtm8eK8X0mN
-								hic0dAAMzA==
+								SInrScI0weY/
+								y4DNl1Q/dg==
 								</data>
 								<key>Size</key>
-								<integer>169085</integer>
+								<integer>168985</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6365,11 +6365,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EYSmKDwl2Lgp
-								Q5yRlZm0FQ==
+								lmr1V1DNF9oi
+								Ks3WoYVQ+A==
 								</data>
 								<key>Size</key>
-								<integer>88629</integer>
+								<integer>88017</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9776,7 +9776,7 @@
 					<key>page6 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9835,11 +9835,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v3QVFvtuN3ZU
-								wS3jI6PyAg==
+								0KueRYeeUpMP
+								xXRghqaBrg==
 								</data>
 								<key>Size</key>
-								<integer>121629</integer>
+								<integer>121580</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -9855,11 +9855,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t2nhFKRihseG
-								m9qiIrf9Mg==
+								sty4UReoPpqf
+								x5WAZ8FXpg==
 								</data>
 								<key>Size</key>
-								<integer>53908</integer>
+								<integer>53604</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11332,7 +11332,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T18:04:06Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11501,11 +11501,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WYJNBBaNUILp
-								R/5TxxLa4Q==
+								K/vY9r2x5tqe
+								9mhDww++DQ==
 								</data>
 								<key>Size</key>
-								<integer>190357</integer>
+								<integer>190257</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -11521,11 +11521,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HshDIhI3uxMk
-								5RsXt0oGpA==
+								Wjess3h+YGxt
+								iGyjRKgP3A==
 								</data>
 								<key>Size</key>
-								<integer>88987</integer>
+								<integer>88375</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13946,7 +13946,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-25T21:25:51Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14985,8 +14985,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XITEjuS9ZUaP
-								hUjLAxRpVA==
+								812buL5ROzY4
+								q9FK2aBBrg==
 								</data>
 								<key>Size</key>
 								<integer>3748</integer>
@@ -15133,7 +15133,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEkv3KhO46ADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcElSHDONsGADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15143,14 +15143,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSS/cqE8
-				m4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSVIcM43
+				rIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBJL9yoTze
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBJUhwzjgA
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15160,7 +15160,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBJL9yoT0QgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBJUhwzjgygAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15170,7 +15170,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBJL9yoT06gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBJUhwzjhlgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
