--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T18:04:06Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WYJNBBaNUILp
-								R/5TxxLa4Q==
+								K/vY9r2x5tqe
+								9mhDww++DQ==
 								</data>
 								<key>Size</key>
-								<integer>190357</integer>
+								<integer>190257</integer>
 							</dict>
 							<key>files/stacks_page_page70.js</key>
 							<dict>
@@ -222,11 +222,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								HshDIhI3uxMk
-								5RsXt0oGpA==
+								Wjess3h+YGxt
+								iGyjRKgP3A==
 								</data>
 								<key>Size</key>
-								<integer>88987</integer>
+								<integer>88375</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
