--- a/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T18:04:06Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jwtm8eK8X0mN
-								hic0dAAMzA==
+								SInrScI0weY/
+								y4DNl1Q/dg==
 								</data>
 								<key>Size</key>
-								<integer>169085</integer>
+								<integer>168985</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EYSmKDwl2Lgp
-								Q5yRlZm0FQ==
+								lmr1V1DNF9oi
+								Ks3WoYVQ+A==
 								</data>
 								<key>Size</key>
-								<integer>88629</integer>
+								<integer>88017</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
