--- a/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/09-003Cheader003EPeople003C002Fheader003E/ChildPages/1-Open-positions/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-26T16:54:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v3QVFvtuN3ZU
-								wS3jI6PyAg==
+								0KueRYeeUpMP
+								xXRghqaBrg==
 								</data>
 								<key>Size</key>
-								<integer>121629</integer>
+								<integer>121580</integer>
 							</dict>
 							<key>files/stacks_page_page6.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								t2nhFKRihseG
-								m9qiIrf9Mg==
+								sty4UReoPpqf
+								x5WAZ8FXpg==
 								</data>
 								<key>Size</key>
-								<integer>53908</integer>
+								<integer>53604</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
