best talk pitch NetSci
best talk pitch NetSci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-15T20:18:26Z</date>
+						<date>2019-03-28T18:39:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -894,11 +894,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								y4Rk3gobJw0C
-								knirj1SIcA==
+								meQzls8YPbBx
+								AP8zZNS5dg==
 								</data>
 								<key>Size</key>
-								<integer>346134</integer>
+								<integer>353663</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -914,11 +914,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jMGo4ZD28DDO
-								ABP2RzDfng==
+								k1DrztFJFO02
+								9NnILlaJtA==
 								</data>
 								<key>Size</key>
-								<integer>259278</integer>
+								<integer>265415</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
