--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-25T21:25:51Z</date>
+						<date>2019-03-31T15:27:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -534,11 +534,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c+v8CyQ/O15v
-								Nb0c8XklSQ==
+								AEMHN34mOcO+
+								0kvQFP6NCw==
 								</data>
 								<key>Size</key>
-								<integer>544832</integer>
+								<integer>544844</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
