--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -5,18 +5,17 @@
 	<key>expandedItems</key>
 	<array>
 		<string>page16</string>
+		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
-	<key>selectedInspectorTab</key>
-	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page53</string>
+		<string>page55</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
