--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -7806,7 +7806,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-31T15:27:05Z</date>
+						<date>2019-04-01T12:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8031,6 +8031,16 @@
 								<key>Size</key>
 								<integer>477959</integer>
 							</dict>
+							<key>files/stacks-image-72d04bd-900x156.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J0oCqNLQIZun
+								8nxN/0xT1A==
+								</data>
+								<key>Size</key>
+								<integer>28375</integer>
+							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
 								<key>Digest</key>
@@ -8081,15 +8091,15 @@
 								<key>Size</key>
 								<integer>61533</integer>
 							</dict>
-							<key>files/stacks-image-8395111-400x160.png</key>
+							<key>files/stacks-image-80d7927-900x156.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ms3meQXAaQnm
-								N/rdpFM+Kw==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>20511</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -8285,11 +8295,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8WENbZeuDGNm
-								jPEql6c9uA==
+								qInlIkBlM7Uc
+								aZTKIjlDBw==
 								</data>
 								<key>Size</key>
-								<integer>691195</integer>
+								<integer>691049</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8305,11 +8315,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AEMHN34mOcO+
-								0kvQFP6NCw==
+								Fo2ZvVm0QuTN
+								xaJEFMUvSA==
 								</data>
 								<key>Size</key>
-								<integer>544844</integer>
+								<integer>545444</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14026,7 +14036,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-31T23:06:33Z</date>
+						<date>2019-04-01T12:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15065,8 +15075,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FqSIm7J7eOv9
-								quA0QhiPrw==
+								ho7jxJ0K3ELu
+								eDEYidGSzQ==
 								</data>
 								<key>Size</key>
 								<integer>3748</integer>
@@ -15213,7 +15223,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEov8Cp8D2ADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEpIOPYEuiADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -15223,14 +15233,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSi/wKnw
-				3IAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwSkg49gT
+				f4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBKL/AqfEP
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBKSDj2BOh
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -15240,7 +15250,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBKL/AqfEwgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBKSDj2BPCgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -15250,7 +15260,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBKL/AqfFSgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBKSDj2BPbgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
