--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-31T15:27:05Z</date>
+						<date>2019-04-01T12:55:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -260,6 +260,16 @@
 								<key>Size</key>
 								<integer>477959</integer>
 							</dict>
+							<key>files/stacks-image-72d04bd-900x156.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								J0oCqNLQIZun
+								8nxN/0xT1A==
+								</data>
+								<key>Size</key>
+								<integer>28375</integer>
+							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
 								<key>Digest</key>
@@ -310,15 +320,15 @@
 								<key>Size</key>
 								<integer>61533</integer>
 							</dict>
-							<key>files/stacks-image-8395111-400x160.png</key>
+							<key>files/stacks-image-80d7927-900x156.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ms3meQXAaQnm
-								N/rdpFM+Kw==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>20511</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
@@ -514,11 +524,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8WENbZeuDGNm
-								jPEql6c9uA==
+								qInlIkBlM7Uc
+								aZTKIjlDBw==
 								</data>
 								<key>Size</key>
-								<integer>691195</integer>
+								<integer>691049</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -534,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AEMHN34mOcO+
-								0kvQFP6NCw==
+								Fo2ZvVm0QuTN
+								xaJEFMUvSA==
 								</data>
 								<key>Size</key>
-								<integer>544844</integer>
+								<integer>545444</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
