--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -8,14 +8,16 @@
 		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
-	<key>projectViewVisible</key>
 	<true/>
+	<key>projectViewVisible</key>
+	<false/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page53</string>
+		<string>page55</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
