Parallel Session part one
Parallel Session part one

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-01T12:55:30Z</date>
+						<date>2019-04-04T15:12:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,31 +524,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qInlIkBlM7Uc
-								aZTKIjlDBw==
+								XMUzIvuy4ZaY
+								Y/ATba25KQ==
 								</data>
 								<key>Size</key>
-								<integer>691049</integer>
+								<integer>551132</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								q/j6iPbY1K/M
-								dP1vFOTVvw==
+								wXuEaS5A1jX0
+								Of0ylh+9gg==
 								</data>
 								<key>Size</key>
-								<integer>44771</integer>
+								<integer>55145</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Fo2ZvVm0QuTN
-								xaJEFMUvSA==
+								uW4epFDIfpy2
+								uJsS7HppoQ==
 								</data>
 								<key>Size</key>
-								<integer>545444</integer>
+								<integer>614627</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
