Parallel Session inport 2
Parallel Session inport 2

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-04T15:12:41Z</date>
+						<date>2019-04-04T18:49:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,31 +524,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XMUzIvuy4ZaY
-								Y/ATba25KQ==
+								WRKdz/eXYbDD
+								O06GhmPsWA==
 								</data>
 								<key>Size</key>
-								<integer>551132</integer>
+								<integer>572134</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wXuEaS5A1jX0
-								Of0ylh+9gg==
+								vn0c+WDEY7l8
+								pGm+RzZvoQ==
 								</data>
 								<key>Size</key>
-								<integer>55145</integer>
+								<integer>64427</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								uW4epFDIfpy2
-								uJsS7HppoQ==
+								hLUfXnRoy1Ju
+								2Hv0D8in3g==
 								</data>
 								<key>Size</key>
-								<integer>614627</integer>
+								<integer>795112</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
