poster session netsci
poster session netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-04T22:34:13Z</date>
+						<date>2019-04-07T21:39:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,31 +524,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SxumMHtX8m9z
-								PBWjI6Nzbw==
+								+YsMX6nQWSNQ
+								SDPebXStBQ==
 								</data>
 								<key>Size</key>
-								<integer>599774</integer>
+								<integer>599499</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								HyjjeW44eB7Y
-								o7gGVZsPlw==
+								1twcO7P6ajw1
+								TB81zBYsNg==
 								</data>
 								<key>Size</key>
-								<integer>78805</integer>
+								<integer>78623</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rooF5YpaUusI
-								QLwmCVztPQ==
+								Ai3zGfaXx/+f
+								XpLYEHUc4Q==
 								</data>
 								<key>Size</key>
-								<integer>961269</integer>
+								<integer>978336</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
