--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -10,7 +10,7 @@
 	<key>pageInspectorVisible</key>
 	<true/>
 	<key>projectViewVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedItems</key>
