updated schedule text
updated schedule text

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-07T21:39:50Z</date>
+						<date>2019-04-07T23:21:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,11 +524,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+YsMX6nQWSNQ
-								SDPebXStBQ==
+								56NsN1JRRpGG
+								ERpIn4WznA==
 								</data>
 								<key>Size</key>
-								<integer>599499</integer>
+								<integer>599390</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ai3zGfaXx/+f
-								XpLYEHUc4Q==
+								+PS96y4hPH/S
+								EkK94y0AhQ==
 								</data>
 								<key>Size</key>
-								<integer>978336</integer>
+								<integer>977636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
