--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-04-07T23:21:48Z</date>
+						<date>2019-04-08T02:50:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,8 +524,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								56NsN1JRRpGG
-								ERpIn4WznA==
+								uWOitvHkqAz6
+								a25vfZRySQ==
 								</data>
 								<key>Size</key>
 								<integer>599390</integer>
@@ -534,8 +534,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1twcO7P6ajw1
-								TB81zBYsNg==
+								pzN8ZjM9XwZM
+								hYPLTrQoFA==
 								</data>
 								<key>Size</key>
 								<integer>78623</integer>
@@ -544,8 +544,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+PS96y4hPH/S
-								EkK94y0AhQ==
+								DBTIM+zYaRDH
+								JTyBUBmaKw==
 								</data>
 								<key>Size</key>
 								<integer>977636</integer>
